--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="TemplateGreen">#2BA951</color>
+    <color name="TemplateYellow">#FFEB3B</color>
+    <color name="TemplateRed">#C13F55</color>
+
 </resources>
