--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
 
         <include
             android:id="@+id/main_content"
-            layout="@layout/main_content"
+            layout="@layout/container_main"
             />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
