--- a/app/src/main/res/values-night/attrs.xml
+++ b/app/src/main/res/values-night/attrs.xml
@@ -7,4 +7,12 @@
         <attr name="loadingText" format="string" />
         <attr name="loadingTextColor" format="color" />
     </declare-styleable>
+
+    <declare-styleable name="LoadingButtonV2">
+        <attr name="buttonDefaultBackgroundColor" format="color" />
+        <attr name="buttonBackgroundColor" format="color" />
+        <attr name="buttonDefaultText" format="string" />
+        <attr name="buttonText" format="string" />
+        <attr name="buttonTextColor" format="color" />
+    </declare-styleable>
 </resources>
